force-app/main/default/objects/SFCCConfiguration__c/SFCCConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds configuration settings to Integrate with Salesforce Commerce Cloud.</description>
    <label>SFCC Configuration</label>
</CustomObject>