force-app/main/default/objects/SFCCConfiguration__c/fields/Customer_List_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_List_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Customer List id</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Customer List id</inlineHelpText>
    <label>Customer List Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>