force-app/main/default/objects/SFCCConfiguration__c/fields/Master_Catalog_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Catalog_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud master catalog id for assigned to a commerce cloud site.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud master catalog id for assigned to a commerce cloud site.</inlineHelpText>
    <label>Master Catalog Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>