force-app/main/default/objects/SFCCConfiguration__c/fields/PriceBook_Id__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Price book id assigned to a Salesforce Commerce Cloud Site.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Price book id assigned to a Salesforce Commerce Cloud Site.</inlineHelpText>
    <label>PriceBook Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>