force-app/main/default/objects/SFCCConfiguration__c/fields/Product_Image_Group_Detailview__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Group_Detailview__c</fullName>
    <description>This config holds product details image view type</description>
    <inlineHelpText>This config holds product details image view type</inlineHelpText>
    <label>Product Image Group Detailview</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>