force-app/main/default/objects/SFCCConfiguration__c/fields/Product_Image_Group_Listview__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Group_Listview__c</fullName>
    <description>This config holds product list page image view type</description>
    <inlineHelpText>This config holds product list page image view type</inlineHelpText>
    <label>Product Image Group Listview</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>