force-app/main/default/objects/SFCCConfiguration__c/fields/Sales_Catalog_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Catalog_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Sales Catalog id assigned to a Salesforce Commerce Cloud site.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Sales Catalog id assigned to a Salesforce Commerce Cloud site.</inlineHelpText>
    <label>Sales Catalog Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>