force-app/main/default/objects/SFCCConfiguration__c/fields/SFCC_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Site_URL__c</fullName>
    <description>This field holds Salesforce Commerce Cloud end point domain to connect to Salesforce Commerce Cloud.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud end point domain to connect to Salesforce Commerce Cloud.</inlineHelpText>
    <label>SFCC Site URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>