force-app/main/default/objects/SFCCConfiguration__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Site Id.</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Site Id.</inlineHelpText>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>