force-app/main/default/objects/SFCCConfiguration__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Specified time that connect to commerce cloud and pull datas after rest service triggered(minutes)</description>
    <inlineHelpText>Specified time that connect to commerce cloud and pull datas after rest service triggered(minutes)</inlineHelpText>
    <label>Time</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>